tests/valid/module/package_root/main.facet
mod numbers;

fn main() -> affine isize {
  (numbers::id 7)
}
