tests/invalid/module/unknown_qualified_function_call.facet
fn main() -> affine isize {
  (missing::id 1)
}
